[gd_scene load_steps=5 format=3 uid="uid://dnh3miv3xn4l3"]

[ext_resource type="Script" path="res://ui/popups/level_up_popup.gd" id="1_fj6wc"]
[ext_resource type="Texture2D" uid="uid://bgmu14jk8bck8" path="res://assets/ui_v2.png" id="1_hnrgw"]
[ext_resource type="Texture2D" uid="uid://chxw4bqeltih8" path="res://assets/ph_icon.png" id="2_6pd5o"]
[ext_resource type="Texture2D" uid="uid://b67s3e23rgala" path="res://assets/attack.png" id="3_8jyef"]

[node name="LevelUpPopup" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fj6wc")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.0
offset_top = -200.0
offset_right = 145.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="NinePatchRect" type="NinePatchRect" parent="PanelContainer"]
layout_mode = 2
texture = ExtResource("1_hnrgw")
region_rect = Rect2(0, 0, 50, 50)
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "<Heros> has gained a level."
horizontal_alignment = 1

[node name="HeroIcon" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
texture = ExtResource("2_6pd5o")
expand_mode = 3
stretch_mode = 3

[node name="Level" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "<Heros> is now at level X"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="StatIncreaseIcon" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("3_8jyef")
expand_mode = 2
stretch_mode = 4

[node name="StatIncreaseText" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Attack +1"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Skill1" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Advanced Logistics"
icon = ExtResource("2_6pd5o")
flat = true
icon_alignment = 1
vertical_icon_alignment = 0

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "   or   "

[node name="Skill2" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Basic Luck"
icon = ExtResource("2_6pd5o")
flat = true
icon_alignment = 1
vertical_icon_alignment = 0

[node name="ApproveButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Potwierd≈∫"
flat = true

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Skill1" to="." method="_on_skill_1_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Skill2" to="." method="_on_skill_2_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/ApproveButton" to="." method="_on_approve_button_pressed"]
